# cleanr

./: .cleanr-config.yaml  README.md  cleanr  cleanr.py  install.sh  pyproject.toml  setup.py
Data/: messy_data.csv
demo/examples/: clean_data.csv
examples/: clean_data.csv
profiles/: ecommerce.yaml  personal.yaml  sales.yaml
