[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanr"
version = "1.0.0"
description = "Professional CSV Cleaner"
authors = [{name = "Obed Mensah", email = "heavenzlebron7@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.0.0",
    "pyyaml>=5.0",
    "numpy>=1.18.0",
]

[project.scripts]
cleanr = "cleanr:main"
